kubernetes/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: webapp
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.4-alpine
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "200m"
              memory: "20Mi"
            requests:
              cpu: "150m"
              memory: "15Mi"
