kubernetes/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # Port the service is listening on
      targetPort: 80 # Port the container is listening on (if unset, defaults to equal port value)
